# dragreorder-listview-qrangemodeladater-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TaskApp/: CMakeLists.txt  Main.qml  main.cpp
TaskLib/: CMakeLists.txt  TaskBackend.cpp  TaskBackend.h  TaskDelegate.qml  TaskItem.cpp  TaskItem.h  TaskListView.qml
docs/: CHANGELOG.md  DRAG_CANCELLATION.md
test/: rebase_test_step.sh
